--- a/Front/my-front/src/Styles/CRUD.css
+++ b/Front/my-front/src/Styles/CRUD.css
@@ -5,8 +5,8 @@
 
 /* Style for the CRUD table wrapper */
 .table-wrapper {
-  width: 85%; /* Set the width you desire */
-  margin: 0 auto; /* Center the table horizontally */
+  width: 85%;
+  margin: 0 auto;
   overflow: hidden;
   background-color: #fff;
 }
@@ -16,13 +16,13 @@
   width: 100%;
   border-collapse: collapse;
   margin-bottom: 20px;
-  background-color: #fff; /* Change background color to white */
+  background-color: #fff;
   border-radius: 0 0 10px 10px;
   color: #000;
 }
 .crud-table th,
 .crud-table td {
-  padding: 20px; /* Increase the padding to make elements bigger */
+  padding: 20px;
   text-align: right;
   border-bottom: 1px solid #ccc;
 }
@@ -47,31 +47,47 @@
     width: 100%;
   }
 
-}
+  /* Center align table headers and data for smaller screens */
+  .crud-table th,
+  .crud-table td {
+    text-align: center;
+    padding: 10px; /* Adjust padding for smaller screens */
+  }
 
+  /* Adjust "Add" button positioning and size for smaller screens */
+  .add-button {
+    margin-left:0; /* Reset margin */
+    margin-top: 10px; /* Add margin-top for spacing */
+  }
+
+  .add-button-icon {
+    padding: 10px 20px; /* Adjust padding for smaller buttons */
+    font-size: 14px; /* Reduce font size for smaller buttons */
+  }
+}
 
 /* Style for buttons in the table */
 .crud-table button {
-  background-color: #007bff; 
-  color: #fff; 
+  background-color: #007bff;
+  color: #fff;
   border: none;
-  padding: 10px 20px; /* Increase padding for larger buttons */
+  padding: 10px 20px;
   margin-right: 5px;
   cursor: pointer;
   border-radius: 4px;
-  font-size: 16px; /* Increase font size for larger buttons */
+  font-size: 16px;
 }
 
 .crud-table button:hover {
-  background-color: #0056b3; 
+  background-color: #0056b3;
 }
 
 .crud-table .delete-button {
-  background-color: #dd6772; 
+  background-color: #dd6772;
 }
 
 .crud-table .delete-button:hover {
-  background-color: #cc1010; 
+  background-color: #cc1010;
 }
 
 /* SEARCH*/
@@ -94,7 +110,7 @@
   padding: 10px;
   border: none;
   outline: none;
-  width: 200px; /* You can adjust the width as needed */
+  width: 100%;
 }
 
 /* Style for the search icon */
@@ -127,63 +143,58 @@
   opacity: 0;
 }
 
-
-
 /* Pagination */
 .pagination-container .pagination .page-item {
-  border-radius: 5px; 
-  margin-left: 0.5%; 
+  border-radius: 5px;
+  margin-left: 0.5%;
 }
 
 .pagination-container .pagination .page-item.active .page-link {
-  background-color: #007bff; 
-  border-color: #007bff; 
-  color: #fff; 
+  background-color: #007bff;
+  border-color: #007bff;
+  color: #fff;
 }
 
 /* Add button container */
 .add-button-container {
   display: flex;
   align-items: center;
-  margin-top: 1%;
+  margin-bottom: 2%;
 }
 
 .add-button {
-  margin-left: 78%; 
+  margin-left: 75%;
 }
 
 /* Style for the "Add" button */
 .add-button-icon {
-  background-color: #61b46a;
+  background-color: #82ce7b;
   color: #fff;
-  padding: 12px; /* Set equal padding to create a circular button */
+  padding: 12px 24px;
   border: none;
-  border-radius: 50%; /* Use border-radius to create a circle */
+  border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  width: 36px; /* Set a fixed width and height for consistency */
-  height: 36px;
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
-
-
 .add-button-icon:hover {
-  background-color: #0056b3;
+  background-color: #2a7523;
 }
 
 /* Style for the delete icon */
 .delete-icon {
-  background-color: #dd6772; 
-  color: #fff; 
+  background-color: #dd6772;
+  color: #fff;
   border: none;
-  padding: 12px 24px; /* Increase padding for larger button */
+  padding: 12px 24px;
   margin-left: 8%;
   cursor: pointer;
   border-radius: 4px;
-  font-size: 16px; /* Increase font size for larger button */
+  font-size: 16px;
 }
 
 .delete-icon:hover {
