--- a/Front/my-front/src/Styles/NotFound.css
+++ b/Front/my-front/src/Styles/NotFound.css
@@ -1,35 +1,34 @@
-/* NotFound.css */
 .not-found-container {
     text-align: center;
     padding: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; /* Center content vertically and horizontally */
-    min-height: 100vh; /* Use min-height for full viewport coverage */
-    background-color: #ffffff; /* Add a background color */
+    justify-content: center; 
+    min-height: 100vh; 
+    background-color: #ffffff;
     font-family: 'Roboto', sans-serif;
   }
   
   .not-found-header {
-    font-size: 10rem; /* Use relative units for font size */
-    color: #000000; /* Choose a vibrant color for emphasis */
+    font-size: 10rem; 
+    color: #000000; 
   }
   
   .not-found-message {
-    font-size: 3rem; /* Use relative units for font size */
+    font-size: 3rem;
     color: #333;
   }
   
   .back-to-home-link {
-    margin-top: 20px; /* Add some spacing between the message and the link */
+    margin-top: 20px;
     text-decoration: none;
-    color: #007bff; /* Use a link color consistent with your site's theme */
+    color: #007bff; 
     font-weight: bold;
-    transition: color 0.3s ease; /* Add a smooth color transition on hover */
+    transition: color 0.3s ease; 
   }
   
   .back-to-home-link:hover {
-    color: #0056b3; /* Change link color on hover */
+    color: #0056b3;
   }
   
