--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -1,10 +1,19 @@
 /* Add this CSS to your stylesheet */
 
 .card-list {
-width:94%;
-margin-left:5.4%;
-margin-right:1.6%;
-display: flex;
-flex-wrap: wrap; /* Allow cards to wrap to the next line */
-justify-content: space-between; /* Distribute cards evenly along the row */
-}
+    margin-left: 5.7%;
+    margin-right: 1.3%;
+    display: flex;
+    flex-wrap: wrap; /* Allow cards to wrap to the next line */
+    justify-content: space-between; /* Distribute cards evenly along the row */
+  }
+  
+  .pagination-container {
+    /* Adjust the positioning as per your requirements */
+    position: absolute;
+    bottom: 10px; /* You can use 'top', 'bottom', 'left', 'right' to position it */
+    right: 0;
+    left: 0; /* Center it horizontally */
+    text-align: center; /* Center the pagination items within the container */
+  }
+  
