--- a/Front/my-front/src/index.css
+++ b/Front/my-front/src/index.css
@@ -5,8 +5,9 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
-}
+    background-color: #1a1a2e;
+    color: #e4e4e4;
+  }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
