get the process in real time and kill

--- a/Front/my-front/src/Styles/Command.css
+++ b/Front/my-front/src/Styles/Command.css
@@ -1,6 +1,8 @@
 .command-container{
     width:500px;
-    background-color: black;
-    height: 742px;
+    background-color: #110f18;
+    height: 820px;
+    border-radius: 10px;
+    border: 2px solid #fafaf1;
 }
 
