--- a/Front/my-front/src/Styles/Sidebar.css
+++ b/Front/my-front/src/Styles/Sidebar.css
@@ -3,9 +3,10 @@
   top: 0;
   left: 0;
   height: 100%;
-  background-color: #333;
+  background-color: #110f18;
   padding-top: 30px;
   border-radius: 5px;
+  border: 2px solid #fafaf1;
 }
 
 .sidebar a {
