--- a/Front/my-front/src/Styles/Pagination.css
+++ b/Front/my-front/src/Styles/Pagination.css
@@ -12,7 +12,7 @@
   }
   
   .pagination-container .pagination .page-link {
-    background-color: #1a1a2e; 
+    background-color: #131322; 
     border: 1px solid #444;
     color: #e4e4e4; 
     padding: 10px 15px;
@@ -35,7 +35,7 @@
   }
   
   .pagination-container .pagination .page-item.disabled .page-link {
-    background-color: #1a1a2e; 
+    background-color: #131322; 
     border-color: #444; 
     color: #888; 
     cursor: not-allowed;
