--- a/Front/my-front/src/Styles/Command.css
+++ b/Front/my-front/src/Styles/Command.css
@@ -1,8 +1,54 @@
-.command-container{
-    width:500px;
+.command-container {
+    width: 500px;
     background-color: #110f18;
     height: 820px;
     border-radius: 10px;
+    font-family: Arial, sans-serif;
     border: 2px solid #fafaf1;
+    font-size: 16px; /* Adjust the font size as needed */
 }
 
+.command-container select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    font-size: 14px; /* Adjust the font size as needed */
+}
+
+.command-container input {
+    width: calc(100% - 22px);
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    font-size: 14px; /* Adjust the font size as needed */
+}
+
+.confirm-button {
+    background-color: #36943a;
+    color: white;
+    border: none;
+    margin-left: 40%;
+    padding: 10px 20px;
+    margin-top: 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px; /* Adjust the font size as needed */
+}
+.confirm-button:hover{
+    background-color: #367938;
+}
+
+
+.command-container hr {
+    border: 2px solid #fafaf1;
+    margin: 20px 0;
+}
+
+.command-container select[disabled] {
+    display: none;
+}
