--- a/Front/my-front/src/Styles/History.css
+++ b/Front/my-front/src/Styles/History.css
@@ -6,10 +6,19 @@
     margin-right: 2%;
 }
 
+.delete-button{
+  background-color: #110f18;
+  padding:5px 10px;
+}
+
+.delete-button:hover{
+  color: #68625e;
+}
+
 .hovered-td:hover {
   background-color: #fafaf1;
   cursor: pointer;
-}
+} 
 
 
 .history-detail{
