adding some design

--- a/Front/my-front/src/Styles/App.css
+++ b/Front/my-front/src/Styles/App.css
@@ -1,5 +1,5 @@
 .app-container{
     font-family: Arial, sans-serif;
-    background-color: #131322;
+    background-color: #110f18;
     color: #e4e4e4; 
 }
