--- a/Front/my-front/src/index.css
+++ b/Front/my-front/src/index.css
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #131322;
+  background-color: #110f18;
   color: #e4e4e4; 
   }
 
