--- a/Front/my-front/src/Styles/CardItem.css
+++ b/Front/my-front/src/Styles/CardItem.css
@@ -26,7 +26,7 @@
   .card {
     width: 200px; 
     height: 200px; 
-    background-color: #fff;
+    background-color: #131322;
     border-radius: 10px; 
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
