--- a/Front/my-front/src/Styles/HistoryDetail.css
+++ b/Front/my-front/src/Styles/HistoryDetail.css
@@ -16,3 +16,10 @@
     margin-bottom: 30px; 
     font-size: 16px;
 }
+
+.no-select{
+    margin-left:2%;
+    margin-top:30%;
+    font-weight: bold;
+    font-size: x-large;
+}
