--- a/Front/my-front/src/Styles/Terminal.css
+++ b/Front/my-front/src/Styles/Terminal.css
@@ -1,10 +1,42 @@
-.terminal-container {
-    width: 700px;
-    margin-top: 2.8%;
-    background-color: #110f18;
-    height: 400px; /* Adjust the height as needed */
-    overflow: auto;
-    border-radius: 10px;
-    border: 2px solid #fafaf1;
+.terminal {
+  width: 680px;
+  margin-top: 2.8%;
+  overflow: auto;
+  border-radius: 10px;
+  border: 2px solid #fafaf1;
+  font-family: monospace;
+  background-color: #110f18;
+  color: #fff;
+  padding: 10px;
+  height: 400px;
   }
+
+.terminal-input {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+}
+
+.prompt {
+  color: #00ff00;
+  margin-right: 5px;
+}
+
+input[type="text"] {
+  background-color: transparent;
+  border: none;
+  color: #fff;
+  width: 100%;
+  outline: none;
+  font-family: monospace;
+}
+
+.output {
+  margin-top: 5px;
+}
+
+.clear-button{
+  background-color: red;
+}
+
   
