--- a/Front/my-front/src/Styles/Command.css
+++ b/Front/my-front/src/Styles/Command.css
@@ -1,11 +1,11 @@
 .command-container {
     width: 500px;
     background-color: #110f18;
-    height: 800px;
+    height: 840px;
     border-radius: 10px;
     font-family: Arial, sans-serif;
     border: 2px solid #fafaf1;
-    font-size: 16px; /* Adjust the font size as needed */
+    font-size: 16px; 
 }
 
 .command-container select {
@@ -15,7 +15,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
-    font-size: 14px; /* Adjust the font size as needed */
+    font-size: 14px; 
 }
 
 .command-container input {
@@ -25,7 +25,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #fff;
-    font-size: 14px; /* Adjust the font size as needed */
+    font-size: 14px; 
 }
 
 .confirm-button {
@@ -37,7 +37,7 @@
     margin-top: 10px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px; /* Adjust the font size as needed */
+    font-size: 16px; 
 }
 .confirm-button:hover{
     background-color: #367938;
