--- a/Front/my-front/src/Styles/Sidebar.css
+++ b/Front/my-front/src/Styles/Sidebar.css
@@ -1,18 +1,18 @@
 .sidebar {
+  width: 70px;
   position: fixed;
   top: 0;
   left: 0;
-  margin-top: 10%;
+  margin-top: 7%;
   height: 60%;
   background-color: #110f18;
-  padding-top: 30px;
+  padding-top: 5%;
   border-radius: 5px; 
   border: 2px solid #fafaf1;
 }
 
-
 .sidebar a {
-  padding: 15px 10px;
+
   text-decoration: none;
   font-size: 18px;
   color: #fff;
@@ -20,7 +20,7 @@
   transition: 0.3s;
 }
 
-.sidebar .nav-link img {
+.sidebar img {
   width: 35px;
   height: 35px;
 }
@@ -34,8 +34,28 @@
   background-color: #fafaf1;
 }
 
-.main-content {
-  padding: 20px;
+.sidebar button{
+  background-color:#110f18;
+  width: 100%;
+}
+
+.sidebar button:hover{
+  background-color:#fafaf1;
+}
+
+.logout-button {
+  position: absolute; /* Make the button's position absolute */
+  bottom: 5%; /* Set the bottom distance to 5% */
+  width: 100%;
+  background-color: #110f18;
+}
+
+select{
+  background-color:#110f18;
+}
+
+.select-dropdown{
+  border:none;
 }
 
 @media screen and (max-width: 600px) {
