--- a/Front/my-front/src/Styles/Sidebar.css
+++ b/Front/my-front/src/Styles/Sidebar.css
@@ -1,8 +1,6 @@
 .sidebar {
   width: 70px;
   position: fixed;
-  top: 0;
-  left: 0;
   margin-top: 7%;
   height: 60%;
   background-color: #110f18;
@@ -25,11 +23,6 @@
   height: 35px;
 }
 
-.sidebar a:hover {
-  background-color: #fafaf1;
-  color: #fff;
-}
-
 .sidebar .active {
   background-color: #fafaf1;
 }
@@ -44,8 +37,8 @@
 }
 
 .logout-button {
-  position: absolute; /* Make the button's position absolute */
-  bottom: 5%; /* Set the bottom distance to 5% */
+  position: absolute; 
+  bottom: 5%;
   width: 100%;
   background-color: #110f18;
 }
