--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -2,10 +2,17 @@
     margin-top: 10px;
     margin-left: 5.7%;
     margin-right: 1.3%;
-    display: flex;
-    flex-wrap: wrap; 
-    justify-content: space-between; 
   }
+
+.option-list{
+  display: inline-block;
+}
+
+.cardlist{
+  display: flex;
+  flex-wrap: wrap; 
+  justify-content:space-between; 
+}
   
   .pagination-container {
     position: absolute;
