--- a/Front/my-front/src/Styles/CardPage.css
+++ b/Front/my-front/src/Styles/CardPage.css
@@ -1,7 +1,7 @@
 .cardpage-container {
     margin-left: 5%;
     height: 100%;
-    background-color: rgb(6, 1, 26);
+    background-color: #06011a;
   }
   
 .toAlign {
