--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -8,6 +8,16 @@
   display: inline-block;
 }
 
+.new-button{
+  display: flex;
+  align-items: center;
+  background-color: #489c40;
+}
+
+.new-button:hover{
+  background-color: #2a7523;
+}
+
 .cardlist{
   display: flex;
   flex-wrap: wrap; 
