--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -24,4 +24,121 @@
   flex-wrap: wrap; 
   justify-content:space-between; 
 }
+.custom-file {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-file-input {
+  display: none;
+}
+.file-input-container {
+  display: flex;
+  align-items: center;
+}
+
+.custom-file-label {
+  background-color: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.custom-file-input::before {
+  content: 'Browse';
+}
+
+.custom-file-input::after {
+  content: 'Change File';
+}
+
+.custom-file-label:hover {
+  background-color: #0056b3;
+}
+.custom-file-label {
+  display: flex;
+  align-items: center;
+  width: 90px;
+}
+
+.popup {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 999; 
+  border: 2px solid #0056b3
+}
+
+.popup-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 350px;
+  height: 600px;
+  border: 2px solid;
+  background: #fff; 
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.popup-button{
+  display: flex;
+  align-items: center;
+  background: #007BFF;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.send-button {
+  margin-top: 10px; /* Add space between the content above and the button */
+  display: flex;
+  justify-content: center; /* Center the button horizontally */
+}
+
+/*selected files*/
+.selected-files-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.file-box {
+  border: 1px solid #ccc;
+  margin: 10px;
+  border-radius: 5px;
+  width: 80px; 
+  height: 80px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center; 
+  overflow: hidden; 
+}
+
+img, video, p {
+  max-width: 100%;
+  max-height: 100%; /* Fit content within the square box */
+}
+
+
+
+
+
+
+
   
