--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -104,41 +104,53 @@
   border-radius: 5px;
   cursor: pointer;
 }
-
-.send-button {
-  margin-top: 10px; /* Add space between the content above and the button */
-  display: flex;
-  justify-content: center; /* Center the button horizontally */
+.selected-file-container {
+  position: relative;
 }
 
-/*selected files*/
 .selected-files-container {
   display: flex;
   flex-wrap: wrap;
 }
 
+
 .file-box {
   border: 1px solid #ccc;
   margin: 10px;
   border-radius: 5px;
-  width: 80px; 
-  height: 80px; 
+  width: 90px;
+  height: 90px;
   display: flex;
   flex-direction: column;
-  align-items: center; 
-  justify-content: center; 
-  overflow: hidden; 
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  position: relative;
 }
 
-img, video, p {
-  max-width: 100%;
-  max-height: 100%; /* Fit content within the square box */
+.clear-icon {
+  color: #9b1111;
+  border: none;
+  transition: background-color 0.3s ease;
+  position: fixed;  
+  margin-left: 25px; 
+  z-index: 1; 
 }
 
+.clear-icon:hover {
+  color: #292727;
+}
 
+.popup img,
+.popup video,
+.popup p {
+  width: 100%;
+  height: 100%;
+}
 
-
-
-
-
+.send-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
   
