--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -4,9 +4,27 @@
     margin-right: 1.3%;
   }
 
-.option-list{
-  display: inline-block;
-}
+  .test-align {
+    display: flex;
+    justify-content: space-between; 
+  }
+
+  .right-buttons {
+    display: flex;
+    align-items: center; 
+  }
+
+  .popup-button{
+    display: flex;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .option-list hr{
+    margin: 1%;
+  }
 
 .new-button{
   display: flex;
@@ -90,17 +108,6 @@
   padding: 20px;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-}
-
-
-.popup-button{
-  display: flex;
-  align-items: center;
-  color: #fff;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
 .close-icon {
