--- a/Front/my-front/src/Styles/machineOption.css
+++ b/Front/my-front/src/Styles/machineOption.css
@@ -9,6 +9,11 @@
     border: 1px solid #ccc;
     border-radius: 10px;
 }
+
+.select-OS{
+  display: 'flex';
+  justify-content:space-between
+}
   
   .input-group {
     display: flex;
