design for input

--- a/Front/my-front/src/Styles/machineOption.css
+++ b/Front/my-front/src/Styles/machineOption.css
@@ -10,10 +10,11 @@
     border-radius: 10px;
 }
 
-.select-OS{
-  display: 'flex';
-  justify-content:space-between
+.select-OS {
+  display: flex;
+  justify-content:space-around;
 }
+
   
   .input-group {
     display: flex;
@@ -51,54 +52,5 @@
     background-color: #ccc;
     cursor: not-allowed;
   }
-  
-  /* Styling for the manual input fields */
-  .manual-input {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  
-  .manual-input label {
-    margin-bottom: 5px;
-  }
-  
-  .manual-input input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    margin-bottom: 10px;
-  }
-  
-  /* Style the label and input to align horizontally */
-  .manual-input label,
-  .manual-input input {
-    display: inline-block;
-    width: 100%;
-  }
-  
-  /* Styling for the select dropdowns */
-  .select-dropdown {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 10px;
-  }
-  
-  .select-dropdown label {
-    margin-bottom: 5px;
-  }
-  
-  .select-dropdown select {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    margin-bottom: 10px;
-  }
-  
-  /* Style the label and select to align horizontally */
-  .select-dropdown label,
-  .select-dropdown select {
-    display: inline-block;
-    width: 100%;
-  }
+
   
