--- a/Front/my-front/src/Styles/CardList.css
+++ b/Front/my-front/src/Styles/CardList.css
@@ -13,6 +13,9 @@
     display: flex;
     align-items: center; 
   }
+  .right-buttons > Button {
+    margin-left: 10px;
+  }
 
   .popup-button{
     display: flex;
