--- a/Front/my-front/src/Styles/LoginForm.css
+++ b/Front/my-front/src/Styles/LoginForm.css
@@ -1,13 +1,14 @@
-/* LoginForm.css */
-
-.login-container {
-    max-width: 40%;
-    margin: 12% auto 0;
+.crud-form-container {
+    background-color: #110f18;
+    margin: 2% auto; 
+    width: 25%; 
+    min-height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 20px;
     border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    box-shadow: 0px 0px 5px 0px #ccc;
+    border-radius: 10px;
 }
 
 .login-title {
