--- a/Front/my-front/src/Styles/CardPage.css
+++ b/Front/my-front/src/Styles/CardPage.css
@@ -14,14 +14,18 @@
     margin-top: 15%;
 }
 
-.deconnect{
-    margin-left:50%;
-    padding: 15px 20px;
-    background-color: #652f6b;
+.deconnect {
+  padding: 15px 30px;
+  background-color: #1caa23; 
+  border-radius: 5px; 
+  border:none;
+  font-size: 20px;
 }
-.deconnect:hover{
-  background-color: #542958;
+
+.deconnect:hover {
+  background-color: #397213; 
 }
+
 
 hr{
     margin-top: 13.8%;
