--- a/Front/my-front/src/Styles/MachineAll.css
+++ b/Front/my-front/src/Styles/MachineAll.css
@@ -31,15 +31,16 @@
   
   .machine-table {
     width: 100%;
+    border: 1px solid;
+    border-radius: 10%;
     border-collapse: collapse;
     margin-bottom: 20px;
     background-color: #06011a; 
-    border-radius: 0 0 10px 10px;
     color: #e4e4e4; 
   }
   .machine-table th,
   .machine-table td {
-    padding: 20px;
+    padding: 10px;
     text-align: right;
     border-bottom: 1px solid #444; 
   }
