--- a/Front/my-front/src/Styles/CRUD.css
+++ b/Front/my-front/src/Styles/CRUD.css
@@ -1,4 +1,4 @@
-.main-container {
+/*.main-container {
   display: flex;
   flex-direction: column;
   background-color: #06011a;
@@ -6,7 +6,7 @@
   width: 100%; 
   padding: 20px; 
   box-sizing: border-box; 
-}
+}*/
 
 .crud-container {
   font-family: Arial, sans-serif;
