--- a/Front/my-front/src/Styles/Ressource.css
+++ b/Front/my-front/src/Styles/Ressource.css
@@ -7,6 +7,13 @@
   border-radius: 10px;
   color: white;
 }
+.ressource-info {
+  margin-top: 20%;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center items horizontally */
+  justify-content: center; /* Center items vertically */
+}
 
 .machine-info p,
 .ressource-info p {
